TE notebooks and error debug for robust cluster and robust PCA

--- a/CTown/ctown5-correlation.ipynb
+++ b/CTown/ctown5-correlation.ipynb
@@ -4,8 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"C:/Users/user/meepc\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from models import Hankel,Rank,Cluster,Meepc,Pipeline\n",
@@ -1259,9 +1272,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "array([0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
        "       1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
        "       0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
       ]
      },
@@ -1303,15 +1316,27 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.7764705882352941\n",
+    "# Precision  0.7547169811320755\n",
+    "# Recall  0.8695652173913043\n",
+    "# F1-score  0.8080808080808081"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.49931600547195637 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6\n",
-      "precision - Mean: 0.6097637504614248 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08442871587462082 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.14370466242102556 Median : 0.16 Min : 0.0 Max : 0.46875000000000006\n"
+      "Accuracy -  Mean: 0.49904240766073876 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6\n",
+      "precision - Mean: 0.6150655223329642 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.0839231547017189 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
+      "f1 -        Mean: 0.14294762840667963 Median : 0.16 Min : 0.0 Max : 0.46875000000000006\n"
      ]
     }
    ],
@@ -1332,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,19 +1384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,17 +1409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5882352941176471\n",
-      "Precision  0.5679012345679012\n",
-      "Recall  1.0\n",
-      "F1-score  0.7244094488188977\n"
+      "Accuracy  0.5529411764705883\n",
+      "Precision  0.5487804878048781\n",
+      "Recall  0.9782608695652174\n",
+      "F1-score  0.7031250000000001\n"
      ]
     }
    ],
@@ -1407,17 +1432,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.5882352941176471\n",
+    "# Precision  0.5679012345679012\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.7244094488188977"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5242134062927497 Median : 0.5176470588235295 Min : 0.4588235294117647 Max : 0.6823529411764706\n",
-      "precision - Mean: 0.5915377912095021 Median : 0.7391304347826086 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.17340748230535896 Median : 0.17391304347826086 Min : 0.0 Max : 0.5434782608695652\n",
-      "f1 -        Mean: 0.25391010740972225 Median : 0.2857142857142857 Min : 0.0 Max : 0.6493506493506493\n"
+      "Accuracy -  Mean: 0.5102599179206566 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.5496850674979598 Median : 0.6923076923076923 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16279069767441862 Median : 0.1956521739130435 Min : 0.0 Max : 0.41304347826086957\n",
+      "f1 -        Mean: 0.23814671985631844 Median : 0.2903225806451613 Min : 0.0 Max : 0.5428571428571429\n"
      ]
     }
    ],
@@ -1438,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,19 +1532,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
+       "array([1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
        "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1,\n",
        "       1, 0])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1528,9 +1565,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy  0.6764705882352942\n",
-      "Precision  0.5853658536585366\n",
-      "Recall  0.8275862068965517\n",
-      "F1-score  0.6857142857142856\n"
+      "Precision  0.5897435897435898\n",
+      "Recall  0.7931034482758621\n",
+      "F1-score  0.676470588235294\n"
      ]
     }
    ],
@@ -1543,17 +1580,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.6764705882352942\n",
+    "# Precision  0.5853658536585366\n",
+    "# Recall  0.8275862068965517\n",
+    "# F1-score  0.6857142857142856"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5902872777017784 Median : 0.5735294117647058 Min : 0.5588235294117647 Max : 0.6764705882352942\n",
-      "precision - Mean: 0.4472967600874577 Median : 0.5 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.06655974338412189 Median : 0.034482758620689655 Min : 0.0 Max : 0.2413793103448276\n",
-      "f1 -        Mean: 0.11104287335268456 Median : 0.06666666666666667 Min : 0.0 Max : 0.3888888888888889\n"
+      "Accuracy -  Mean: 0.5896032831737344 Median : 0.5735294117647058 Min : 0.5588235294117647 Max : 0.6470588235294118\n",
+      "precision - Mean: 0.4538859073742795 Median : 0.5 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.06415396952686447 Median : 0.034482758620689655 Min : 0.0 Max : 0.20689655172413793\n",
+      "f1 -        Mean: 0.107771444978657 Median : 0.06666666666666667 Min : 0.0 Max : 0.31578947368421056\n"
      ]
     }
    ],
@@ -1569,12 +1618,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple clusters : No threshold tuning (pure test data)"
+    "# Multiple clusters : No threshold tuning (training attack is not in test data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,19 +1650,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,17 +1675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.45588235294117646\n",
-      "Precision  0.4393939393939394\n",
-      "Recall  1.0\n",
-      "F1-score  0.6105263157894737\n"
+      "Accuracy  0.4411764705882353\n",
+      "Precision  0.4307692307692308\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.5957446808510639\n"
      ]
     }
    ],
@@ -1649,17 +1698,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.45588235294117646\n",
+    "# Precision  0.4393939393939394\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6105263157894737"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5783173734610123 Median : 0.5735294117647058 Min : 0.47058823529411764 Max : 0.6911764705882353\n",
-      "precision - Mean: 0.35534000882838096 Median : 0.4 Min : 0.0 Max : 0.8571428571428571\n",
-      "recall -    Mean: 0.12830793905372895 Median : 0.10344827586206896 Min : 0.0 Max : 0.3448275862068966\n",
-      "f1 -        Mean: 0.1831755616503172 Median : 0.16666666666666663 Min : 0.0 Max : 0.4878048780487806\n"
+      "Accuracy -  Mean: 0.5742134062927496 Median : 0.5735294117647058 Min : 0.47058823529411764 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.37765212823352357 Median : 0.42857142857142855 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.11948676824378507 Median : 0.10344827586206896 Min : 0.0 Max : 0.3448275862068966\n",
+      "f1 -        Mean: 0.17180477619338905 Median : 0.14634146341463414 Min : 0.0 Max : 0.4444444444444445\n"
      ]
     }
    ],
@@ -1675,12 +1736,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiple clusters : threshold tuning (pure test data)"
+    "# Multiple clusters : threshold tuning (training attack is not in test data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,19 +1768,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,17 +1793,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.45588235294117646\n",
-      "Precision  0.4393939393939394\n",
+      "Accuracy  0.4264705882352941\n",
+      "Precision  0.4264705882352941\n",
       "Recall  1.0\n",
-      "F1-score  0.6105263157894737\n"
+      "F1-score  0.5979381443298969\n"
      ]
     }
    ],
@@ -1755,17 +1816,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.45588235294117646\n",
+    "# Precision  0.4393939393939394\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6105263157894737"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5807113543091655 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.3785738759175276 Median : 0.36363636363636365 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.1371291098636728 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
-      "f1 -        Mean: 0.19102382223814474 Median : 0.18181818181818182 Min : 0.0 Max : 0.5499999999999999\n"
+      "Accuracy -  Mean: 0.5745554035567716 Median : 0.5735294117647058 Min : 0.47058823529411764 Max : 0.6764705882352942\n",
+      "precision - Mean: 0.36158589472542957 Median : 0.42857142857142855 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1194867682437851 Median : 0.10344827586206896 Min : 0.0 Max : 0.3103448275862069\n",
+      "f1 -        Mean: 0.17428759037611172 Median : 0.17647058823529413 Min : 0.0 Max : 0.4285714285714286\n"
      ]
     }
    ],
@@ -1775,6 +1848,13 @@
     "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
     "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1793,7 +1873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
