--- a/CTown/ctown6(data+corr).ipynb
+++ b/CTown/ctown6(data+corr).ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"C:/Users/user/meepc\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from models import Hankel,Corrhankel,Pipeline\n",
@@ -15,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,11 +165,11 @@
       "text/plain": [
        "array([0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
        "       1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
        "       0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7764705882352941\n",
-      "Precision  0.7647058823529411\n",
+      "Accuracy  0.8\n",
+      "Precision  0.7959183673469388\n",
       "Recall  0.8478260869565217\n",
-      "F1-score  0.8041237113402062\n"
+      "F1-score  0.8210526315789473\n"
      ]
     }
    ],
@@ -192,17 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.7764705882352941\n",
+    "# Precision  0.7647058823529411\n",
+    "# Recall  0.8478260869565217\n",
+    "# F1-score  0.8041237113402062"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.4976744186046513 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6\n",
-      "precision - Mean: 0.6209625322997416 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.0813953488372093 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.1382953420231887 Median : 0.16 Min : 0.0 Max : 0.46875000000000006\n"
+      "Accuracy -  Mean: 0.49904240766073876 Median : 0.49411764705882355 Min : 0.4588235294117647 Max : 0.5882352941176471\n",
+      "precision - Mean: 0.6333110763685318 Median : 0.875 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08240647118301316 Median : 0.06521739130434782 Min : 0.0 Max : 0.30434782608695654\n",
+      "f1 -        Mean: 0.14046656302865113 Median : 0.12244897959183672 Min : 0.0 Max : 0.4444444444444444\n"
      ]
     }
    ],
@@ -223,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,19 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,17 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.611764705882353\n",
-      "Precision  0.5822784810126582\n",
+      "Accuracy  0.5647058823529412\n",
+      "Precision  0.5542168674698795\n",
       "Recall  1.0\n",
-      "F1-score  0.736\n"
+      "F1-score  0.7131782945736435\n"
      ]
     }
    ],
@@ -298,17 +323,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.611764705882353\n",
+    "# Precision  0.5822784810126582\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.736"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.516279069767442 Median : 0.5176470588235295 Min : 0.4588235294117647 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.5670844705500533 Median : 0.7272727272727273 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.16177957532861476 Median : 0.15217391304347827 Min : 0.0 Max : 0.4782608695652174\n",
-      "f1 -        Mean: 0.23990380915092968 Median : 0.2592592592592593 Min : 0.0 Max : 0.5789473684210527\n"
+      "Accuracy -  Mean: 0.5222982216142271 Median : 0.5176470588235295 Min : 0.43529411764705883 Max : 0.6941176470588235\n",
+      "precision - Mean: 0.5724856798548209 Median : 0.6818181818181818 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.17947421638018202 Median : 0.17391304347826086 Min : 0.0 Max : 0.5652173913043478\n",
+      "f1 -        Mean: 0.2593676077149999 Median : 0.2711864406779661 Min : 0.0 Max : 0.6666666666666667\n"
      ]
     }
    ],
@@ -328,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,19 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "array([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,17 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.45588235294117646\n",
-      "Precision  0.4393939393939394\n",
+      "Accuracy  0.5\n",
+      "Precision  0.4603174603174603\n",
       "Recall  1.0\n",
-      "F1-score  0.6105263157894737\n"
+      "F1-score  0.6304347826086957\n"
      ]
     }
    ],
@@ -421,6 +458,18 @@
     "print(\"Precision \",precision_score(y_actual,y_predicted))\n",
     "print(\"Recall \",recall_score(y_actual,y_predicted))\n",
     "print(\"F1-score \",f1_score(y_actual,y_predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.45588235294117646\n",
+    "# Precision  0.4393939393939394\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6105263157894737"
    ]
   },
   {
@@ -433,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +522,7 @@
        "       1, 1])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -509,17 +558,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.4264705882352941\n",
+    "# Precision  0.4264705882352941\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.5979381443298969"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5714774281805746 Median : 0.5735294117647058 Min : 0.4264705882352941 Max : 0.6911764705882353\n",
-      "precision - Mean: 0.36264830827146716 Median : 0.42857142857142855 Min : 0.0 Max : 0.875\n",
-      "recall -    Mean: 0.1932638331996792 Median : 0.1724137931034483 Min : 0.0 Max : 0.5862068965517241\n",
-      "f1 -        Mean: 0.240144969793951 Median : 0.26415094339622647 Min : 0.0 Max : 0.5573770491803278\n"
+      "Accuracy -  Mean: 0.5735294117647058 Median : 0.5735294117647058 Min : 0.5 Max : 0.6911764705882353\n",
+      "precision - Mean: 0.363488230035788 Median : 0.4444444444444444 Min : 0.0 Max : 0.8333333333333334\n",
+      "recall -    Mean: 0.17161186848436247 Median : 0.1724137931034483 Min : 0.0 Max : 0.5862068965517241\n",
+      "f1 -        Mean: 0.22273778180260664 Median : 0.23255813953488377 Min : 0.0 Max : 0.5666666666666665\n"
      ]
     }
    ],
@@ -529,6 +590,13 @@
     "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
     "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -547,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Mar 10 2023, 10:55:28) [GCC 11.3.0]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
