--- a/CTown/ctown8(onlycorr+minmax).ipynb
+++ b/CTown/ctown8(onlycorr+minmax).ipynb
@@ -4,8 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"C:/Users/user/meepc\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from models import Hankel,Corrhankel,Pipeline\n",
@@ -194,15 +207,27 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.8\n",
+    "# Precision  0.7735849056603774\n",
+    "# Recall  0.8913043478260869\n",
+    "# F1-score  0.8282828282828283"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5400820793433654 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
-      "precision - Mean: 0.7512091733435963 Median : 0.9 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.16683518705763395 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
-      "f1 -        Mean: 0.265077741608589 Median : 0.2592592592592593 Min : 0.0 Max : 0.5396825396825397\n"
+      "Accuracy -  Mean: 0.5395348837209304 Median : 0.5411764705882353 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.7511325058250683 Median : 0.9 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16582406471183012 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
+      "f1 -        Mean: 0.2635491926789524 Median : 0.2641509433962264 Min : 0.0 Max : 0.5396825396825397\n"
      ]
     }
    ],
@@ -222,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -258,11 +283,11 @@
       "text/plain": [
        "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1,\n",
        "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,17 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7647058823529411\n",
-      "Precision  0.703125\n",
+      "Accuracy  0.7529411764705882\n",
+      "Precision  0.6923076923076923\n",
       "Recall  0.9782608695652174\n",
-      "F1-score  0.8181818181818182\n"
+      "F1-score  0.8108108108108107\n"
      ]
     }
    ],
@@ -298,17 +323,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.7647058823529411\n",
+    "# Precision  0.703125\n",
+    "# Recall  0.9782608695652174\n",
+    "# F1-score  0.8181818181818182"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5641586867305062 Median : 0.5411764705882353 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
-      "precision - Mean: 0.6433259062065425 Median : 0.8181818181818182 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.22851365015166833 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
-      "f1 -        Mean: 0.3226602827274325 Median : 0.3157894736842105 Min : 0.0 Max : 0.7435897435897436\n"
+      "Accuracy -  Mean: 0.5638850889192887 Median : 0.5411764705882353 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
+      "precision - Mean: 0.645746423581826 Median : 0.8260869565217391 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.23003033367037407 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
+      "f1 -        Mean: 0.3235819667764786 Median : 0.3157894736842105 Min : 0.0 Max : 0.7435897435897436\n"
      ]
     }
    ],
@@ -329,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +427,7 @@
        "       0, 1])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -426,17 +463,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.75\n",
+    "# Precision  0.6764705882352942\n",
+    "# Recall  0.7931034482758621\n",
+    "# F1-score  0.7301587301587301"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.607045143638851 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
-      "precision - Mean: 0.5822351421188631 Median : 0.75 Min : 0.0 Max : 1.0\n",
+      "Accuracy -  Mean: 0.606703146374829 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
+      "precision - Mean: 0.5778423772609819 Median : 0.75 Min : 0.0 Max : 1.0\n",
       "recall -    Mean: 0.10505212510024056 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
-      "f1 -        Mean: 0.1715874549380236 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
+      "f1 -        Mean: 0.17197681203070128 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
      ]
     }
    ],
@@ -457,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +546,7 @@
        "       0, 1])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -533,17 +582,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.7205882352941176\n",
+    "# Precision  0.6136363636363636\n",
+    "# Recall  0.9310344827586207\n",
+    "# F1-score  0.7397260273972602"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6166210670314638 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.5560538469738195 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.14514835605453086 Median : 0.10344827586206896 Min : 0.0 Max : 0.4482758620689655\n",
-      "f1 -        Mean: 0.21997042278722023 Median : 0.17142857142857143 Min : 0.0 Max : 0.5777777777777777\n"
+      "Accuracy -  Mean: 0.6173050615595074 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5570203223588998 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1483560545308741 Median : 0.10344827586206896 Min : 0.0 Max : 0.4482758620689655\n",
+      "f1 -        Mean: 0.2234366878325278 Median : 0.17142857142857143 Min : 0.0 Max : 0.5777777777777777\n"
      ]
     }
    ],
@@ -563,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,19 +652,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -639,17 +700,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.75\n",
+    "# Precision  0.6363636363636364\n",
+    "# Recall  0.9655172413793104\n",
+    "# F1-score  0.7671232876712328"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6169630642954856 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.5729088588869711 Median : 0.7058823529411765 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.14514835605453086 Median : 0.10344827586206896 Min : 0.0 Max : 0.41379310344827586\n",
-      "f1 -        Mean: 0.22137038413445007 Median : 0.1875 Min : 0.0 Max : 0.5499999999999999\n"
+      "Accuracy -  Mean: 0.6173050615595075 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5388187280116146 Median : 0.7 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1475541299117883 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
+      "f1 -        Mean: 0.22124042749184336 Median : 0.1875 Min : 0.0 Max : 0.608695652173913\n"
      ]
     }
    ],
@@ -659,6 +732,13 @@
     "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
     "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -677,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
