--- a/CTown/ctown4_gekko.ipynb
+++ b/CTown/ctown4_gekko.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"C:/Users/user/meepc\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from models import Hankel,Pipeline\n",
@@ -26851,7 +26853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
