--- a/CTown/ctown8(different_k).ipynb
+++ b/CTown/ctown8(different_k).ipynb
@@ -4,8 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"C:/Users/user/meepc\")\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from models import Hankel,Corrhankel,Pipeline\n",
@@ -194,15 +207,27 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.8\n",
+    "# Precision  0.7735849056603774\n",
+    "# Recall  0.8913043478260869\n",
+    "# F1-score  0.8282828282828283"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5398084815321479 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
-      "precision - Mean: 0.7518246431451125 Median : 0.9 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.16632962588473205 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
-      "f1 -        Mean: 0.26443997377659106 Median : 0.2545454545454546 Min : 0.0 Max : 0.5396825396825397\n"
+      "Accuracy -  Mean: 0.5400820793433654 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.7513263042746806 Median : 0.9 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16683518705763395 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
+      "f1 -        Mean: 0.2647579188759229 Median : 0.2592592592592593 Min : 0.0 Max : 0.5396825396825397\n"
      ]
     }
    ],
@@ -222,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -230,22 +255,22 @@
      "output_type": "stream",
      "text": [
       "------Number of Clusters:  2 -----------\n",
-      "Accuracy  0.7647058823529411\n",
-      "Precision  0.703125\n",
+      "Accuracy  0.7529411764705882\n",
+      "Precision  0.6923076923076923\n",
       "Recall  0.9782608695652174\n",
-      "F1-score  0.8181818181818182 \n",
+      "F1-score  0.8108108108108107 \n",
       "\n",
       "------Number of Clusters:  3 -----------\n",
-      "Accuracy  0.6588235294117647\n",
-      "Precision  0.6133333333333333\n",
+      "Accuracy  0.6352941176470588\n",
+      "Precision  0.5974025974025974\n",
       "Recall  1.0\n",
-      "F1-score  0.7603305785123966 \n",
+      "F1-score  0.7479674796747967 \n",
       "\n",
       "------Number of Clusters:  4 -----------\n",
-      "Accuracy  0.6588235294117647\n",
-      "Precision  0.6133333333333333\n",
-      "Recall  1.0\n",
-      "F1-score  0.7603305785123966 \n",
+      "Accuracy  0.6352941176470588\n",
+      "Precision  0.6\n",
+      "Recall  0.9782608695652174\n",
+      "F1-score  0.743801652892562 \n",
       "\n",
       "------Number of Clusters:  5 -----------\n",
       "Accuracy  0.611764705882353\n",
@@ -254,16 +279,16 @@
       "F1-score  0.736 \n",
       "\n",
       "------Number of Clusters:  6 -----------\n",
-      "Accuracy  0.6235294117647059\n",
-      "Precision  0.5897435897435898\n",
+      "Accuracy  0.611764705882353\n",
+      "Precision  0.5822784810126582\n",
       "Recall  1.0\n",
-      "F1-score  0.7419354838709677 \n",
+      "F1-score  0.736 \n",
       "\n",
       "------Number of Clusters:  7 -----------\n",
-      "Accuracy  0.5764705882352941\n",
-      "Precision  0.5609756097560976\n",
+      "Accuracy  0.5647058823529412\n",
+      "Precision  0.5542168674698795\n",
       "Recall  1.0\n",
-      "F1-score  0.71875 \n",
+      "F1-score  0.7131782945736435 \n",
       "\n"
      ]
     }
@@ -303,27 +328,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------Number of Clusters:  2 -----------\n",
+    "# Accuracy  0.7647058823529411\n",
+    "# Precision  0.703125\n",
+    "# Recall  0.9782608695652174\n",
+    "# F1-score  0.8181818181818182 \n",
+    "\n",
+    "# ------Number of Clusters:  3 -----------\n",
+    "# Accuracy  0.6588235294117647\n",
+    "# Precision  0.6133333333333333\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.7603305785123966 \n",
+    "\n",
+    "# ------Number of Clusters:  4 -----------\n",
+    "# Accuracy  0.6588235294117647\n",
+    "# Precision  0.6133333333333333\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.7603305785123966 \n",
+    "\n",
+    "# ------Number of Clusters:  5 -----------\n",
+    "# Accuracy  0.611764705882353\n",
+    "# Precision  0.5822784810126582\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.736 \n",
+    "\n",
+    "# ------Number of Clusters:  6 -----------\n",
+    "# Accuracy  0.6235294117647059\n",
+    "# Precision  0.5897435897435898\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.7419354838709677 \n",
+    "\n",
+    "# ------Number of Clusters:  7 -----------\n",
+    "# Accuracy  0.5764705882352941\n",
+    "# Precision  0.5609756097560976\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.71875 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.8181818181818182,\n",
-       " 0.7603305785123966,\n",
-       " 0.7603305785123966,\n",
+       "[0.8108108108108107,\n",
+       " 0.7479674796747967,\n",
+       " 0.743801652892562,\n",
        " 0.736,\n",
-       " 0.7419354838709677,\n",
-       " 0.71875]"
+       " 0.736,\n",
+       " 0.7131782945736435]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cluster_fscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [0.8181818181818182,\n",
+    "#  0.7603305785123966,\n",
+    "#  0.7603305785123966,\n",
+    "#  0.736,\n",
+    "#  0.7419354838709677,\n",
+    "#  0.71875]"
    ]
   },
   {
@@ -336,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +480,7 @@
        "       0, 1])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +516,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy  0.75\n",
+    "# Precision  0.6764705882352942\n",
+    "# Recall  0.7931034482758621\n",
+    "# F1-score  0.7301587301587301"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -441,9 +536,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy -  Mean: 0.6063611491108071 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
-      "precision - Mean: 0.5817183462532299 Median : 0.75 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.10344827586206896 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
-      "f1 -        Mean: 0.16933723168106843 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
+      "precision - Mean: 0.5909929863418235 Median : 0.75 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10264635124298314 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
+      "f1 -        Mean: 0.16873336193803887 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
      ]
     }
    ],
@@ -464,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -478,28 +573,28 @@
       "F1-score  0.7671232876712328 \n",
       "\n",
       "------Number of Clusters:  3 -----------\n",
-      "Accuracy  0.6470588235294118\n",
-      "Precision  0.5471698113207547\n",
+      "Accuracy  0.6176470588235294\n",
+      "Precision  0.5272727272727272\n",
       "Recall  1.0\n",
-      "F1-score  0.7073170731707317 \n",
+      "F1-score  0.6904761904761904 \n",
       "\n",
       "------Number of Clusters:  4 -----------\n",
       "Accuracy  0.5441176470588235\n",
-      "Precision  0.4827586206896552\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.6436781609195403 \n",
+      "Precision  0.48333333333333334\n",
+      "Recall  1.0\n",
+      "F1-score  0.6516853932584269 \n",
       "\n",
       "------Number of Clusters:  5 -----------\n",
-      "Accuracy  0.5588235294117647\n",
-      "Precision  0.4915254237288136\n",
+      "Accuracy  0.5441176470588235\n",
+      "Precision  0.48333333333333334\n",
       "Recall  1.0\n",
-      "F1-score  0.6590909090909091 \n",
+      "F1-score  0.6516853932584269 \n",
       "\n",
       "------Number of Clusters:  6 -----------\n",
-      "Accuracy  0.5294117647058824\n",
-      "Precision  0.47540983606557374\n",
+      "Accuracy  0.5735294117647058\n",
+      "Precision  0.5\n",
       "Recall  1.0\n",
-      "F1-score  0.6444444444444445 \n",
+      "F1-score  0.6666666666666666 \n",
       "\n",
       "------Number of Clusters:  7 -----------\n",
       "Accuracy  0.5294117647058824\n",
@@ -545,27 +640,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------Number of Clusters:  2 -----------\n",
+    "# Accuracy  0.75\n",
+    "# Precision  0.6363636363636364\n",
+    "# Recall  0.9655172413793104\n",
+    "# F1-score  0.7671232876712328 \n",
+    "\n",
+    "# ------Number of Clusters:  3 -----------\n",
+    "# Accuracy  0.6470588235294118\n",
+    "# Precision  0.5471698113207547\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.7073170731707317 \n",
+    "\n",
+    "# ------Number of Clusters:  4 -----------\n",
+    "# Accuracy  0.5441176470588235\n",
+    "# Precision  0.4827586206896552\n",
+    "# Recall  0.9655172413793104\n",
+    "# F1-score  0.6436781609195403 \n",
+    "\n",
+    "# ------Number of Clusters:  5 -----------\n",
+    "# Accuracy  0.5588235294117647\n",
+    "# Precision  0.4915254237288136\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6590909090909091 \n",
+    "\n",
+    "# ------Number of Clusters:  6 -----------\n",
+    "# Accuracy  0.5294117647058824\n",
+    "# Precision  0.47540983606557374\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6444444444444445 \n",
+    "\n",
+    "# ------Number of Clusters:  7 -----------\n",
+    "# Accuracy  0.5294117647058824\n",
+    "# Precision  0.47540983606557374\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6444444444444445 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[0.7671232876712328,\n",
-       " 0.7073170731707317,\n",
-       " 0.6436781609195403,\n",
-       " 0.6590909090909091,\n",
-       " 0.6444444444444445,\n",
+       " 0.6904761904761904,\n",
+       " 0.6516853932584269,\n",
+       " 0.6516853932584269,\n",
+       " 0.6666666666666666,\n",
        " 0.6444444444444445]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cluster_fscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [0.7671232876712328,\n",
+    "#  0.7073170731707317,\n",
+    "#  0.6436781609195403,\n",
+    "#  0.6590909090909091,\n",
+    "#  0.6444444444444445,\n",
+    "#  0.6444444444444445]"
    ]
   },
   {
@@ -577,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -597,28 +750,28 @@
       "F1-score  0.6987951807228916 \n",
       "\n",
       "------Number of Clusters:  4 -----------\n",
-      "Accuracy  0.6176470588235294\n",
-      "Precision  0.5272727272727272\n",
+      "Accuracy  0.6323529411764706\n",
+      "Precision  0.5370370370370371\n",
       "Recall  1.0\n",
-      "F1-score  0.6904761904761904 \n",
+      "F1-score  0.6987951807228916 \n",
       "\n",
       "------Number of Clusters:  5 -----------\n",
-      "Accuracy  0.45588235294117646\n",
-      "Precision  0.4393939393939394\n",
+      "Accuracy  0.5882352941176471\n",
+      "Precision  0.5087719298245614\n",
       "Recall  1.0\n",
-      "F1-score  0.6105263157894737 \n",
+      "F1-score  0.6744186046511628 \n",
       "\n",
       "------Number of Clusters:  6 -----------\n",
-      "Accuracy  0.5735294117647058\n",
-      "Precision  0.5\n",
+      "Accuracy  0.5441176470588235\n",
+      "Precision  0.48333333333333334\n",
       "Recall  1.0\n",
-      "F1-score  0.6666666666666666 \n",
+      "F1-score  0.6516853932584269 \n",
       "\n",
       "------Number of Clusters:  7 -----------\n",
-      "Accuracy  0.4852941176470588\n",
-      "Precision  0.453125\n",
+      "Accuracy  0.5\n",
+      "Precision  0.4603174603174603\n",
       "Recall  1.0\n",
-      "F1-score  0.6236559139784946 \n",
+      "F1-score  0.6304347826086957 \n",
       "\n"
      ]
     }
@@ -658,7 +811,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------Number of Clusters:  2 -----------\n",
+    "# Accuracy  0.75\n",
+    "# Precision  0.6363636363636364\n",
+    "# Recall  0.9655172413793104\n",
+    "# F1-score  0.7671232876712328 \n",
+    "\n",
+    "# ------Number of Clusters:  3 -----------\n",
+    "# Accuracy  0.6323529411764706\n",
+    "# Precision  0.5370370370370371\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6987951807228916 \n",
+    "\n",
+    "# ------Number of Clusters:  4 -----------\n",
+    "# Accuracy  0.6176470588235294\n",
+    "# Precision  0.5272727272727272\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6904761904761904 \n",
+    "\n",
+    "# ------Number of Clusters:  5 -----------\n",
+    "# Accuracy  0.45588235294117646\n",
+    "# Precision  0.4393939393939394\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6105263157894737 \n",
+    "\n",
+    "# ------Number of Clusters:  6 -----------\n",
+    "# Accuracy  0.5735294117647058\n",
+    "# Precision  0.5\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6666666666666666 \n",
+    "\n",
+    "# ------Number of Clusters:  7 -----------\n",
+    "# Accuracy  0.4852941176470588\n",
+    "# Precision  0.453125\n",
+    "# Recall  1.0\n",
+    "# F1-score  0.6236559139784946 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -666,19 +863,33 @@
       "text/plain": [
        "[0.7671232876712328,\n",
        " 0.6987951807228916,\n",
-       " 0.6904761904761904,\n",
-       " 0.6105263157894737,\n",
-       " 0.6666666666666666,\n",
-       " 0.6236559139784946]"
+       " 0.6987951807228916,\n",
+       " 0.6744186046511628,\n",
+       " 0.6516853932584269,\n",
+       " 0.6304347826086957]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cluster_fscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [0.7671232876712328,\n",
+    "#  0.6987951807228916,\n",
+    "#  0.6904761904761904,\n",
+    "#  0.6105263157894737,\n",
+    "#  0.6666666666666666,\n",
+    "#  0.6236559139784946]"
    ]
   }
  ],
@@ -698,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
